--- a/task_manager/templates/task_manager/create_task.html
+++ b/task_manager/templates/task_manager/create_task.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Create New Task</h1>
     <form method="post">
+        {% csrf_token %}
         {{form.as_p}}
         <button type="submit">Submit</button>
     </form>
